@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.3.0
 
+	- Added jpeg support to Fluid image() element
+	- Added loading jpeg images from memory
 	- Added binary data type to Fluid
 	- File chosser preview would hang if a device was choosen
 	- Replaced _WIN32 symbols that had come with UTF-8 and the
